--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TestApp</string>
+
+    <string name="pretty_cat">Pretty cat :3</string>
+    <string name="show_next_btn">Next cat</string>
 </resources>
